src/snapshots/cgx__sbom__tests__snapshots__snapshot_simple_lib_no_deps.snap
---
source: src/sbom.rs
expression: normalized
---
{
  "bomFormat": "CycloneDX",
  "components": [],
  "dependencies": [
    {
      "ref": "pkg:cargo/simple-lib-no-deps@0.1.0"
    }
  ],
  "metadata": {
    "component": {
      "bom-ref": "pkg:cargo/simple-lib-no-deps@0.1.0",
      "name": "simple-lib-no-deps",
      "purl": "pkg:cargo/simple-lib-no-deps@0.1.0",
      "type": "application",
      "version": "0.1.0"
    },
    "tools": [
      {
        "name": "cgx",
        "vendor": "cgx project",
        "version": "0.0.3"
      }
    ]
  },
  "specVersion": "1.4",
  "version": 1
}
