src/snapshots/cgx__sbom__tests__snapshots__snapshot_timestamp_default_features.snap
---
source: src/sbom.rs
expression: normalized
---
{
  "bomFormat": "CycloneDX",
  "components": [
    {
      "bom-ref": "pkg:cargo/serde@1.0.228",
      "description": "A generic serialization/deserialization framework",
      "name": "serde",
      "purl": "pkg:cargo/serde@1.0.228",
      "type": "library",
      "version": "1.0.228"
    },
    {
      "bom-ref": "pkg:cargo/serde_core@1.0.228",
      "description": "Serde traits only, with no support for derive -- use the `serde` crate instead",
      "name": "serde_core",
      "purl": "pkg:cargo/serde_core@1.0.228",
      "type": "library",
      "version": "1.0.228"
    }
  ],
  "dependencies": [
    {
      "dependsOn": [
        "pkg:cargo/serde_core@1.0.228"
      ],
      "ref": "pkg:cargo/serde@1.0.228"
    },
    {
      "ref": "pkg:cargo/serde_core@1.0.228"
    },
    {
      "dependsOn": [
        "pkg:cargo/serde@1.0.228"
      ],
      "ref": "pkg:cargo/timestamp@0.1.0"
    }
  ],
  "metadata": {
    "component": {
      "bom-ref": "pkg:cargo/timestamp@0.1.0",
      "name": "timestamp",
      "purl": "pkg:cargo/timestamp@0.1.0",
      "type": "application",
      "version": "0.1.0"
    },
    "tools": [
      {
        "name": "cgx",
        "vendor": "cgx project",
        "version": "0.0.3"
      }
    ]
  },
  "specVersion": "1.4",
  "version": 1
}
